--- a/index.css
+++ b/index.css
@@ -5,45 +5,118 @@
 }
 .image img{
     height: 200px;
-    width: 190px;
+    width: 200px;
     border-radius: 50%;
-    border: 5px solid white;
+    border: 5px solid whitesmoke;
 }
 .all1{
     display: flex;
     gap: 50px;
     background-color:  rgb(11, 11, 41);
-    color: white;
-    
+    color: whitesmoke;
+    padding:20px 50px 20px 40px ;
+    justify-content: space-between;
+}
+.title h1{
+    font-weight: bolder;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    line-height: 28px;
+    font-size: 20px;
+    padding-top: 30px;
+}
+.title span{
+    font-size: 30px;
+    text-decoration: underline;
+    text-underline-offset: 10px;
+}
+.title p{
+    padding-top: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .aboutme{
     text-align: center;
     padding: 20px 40px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color:rgb(11, 11, 41);
+}
+.aboutme h1{
+    padding-bottom: 20px;
+    text-decoration-line: underline;
+    text-decoration-color: rgb(11, 11, 41);
+    text-underline-offset: 10px;
+    font-size: 22px;
+    width: 180px;
+    margin-left: 260px;
+}
+.aboutme h1:hover{
+    text-decoration: none;
+}
+.education dl dt{
+    font-size: 14px;
+    font-weight: bold;
+    padding-top: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    
+}
+.education h3{
+    padding-top: 15px;
+}
+.education span{
+    background-color: rgb(11, 11, 41);
+    padding: 7px 13px 7px 13px;
+    border-radius: 50%;
+    color: whitesmoke;
+    position: absolute;
+    margin-left: -40px;
+    margin-top: 20px;
+}
+.education dd{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    
 }
 .all2{
     display: flex;
      justify-content: space-between;
      gap: 20px;
+     padding: 10px 20px 30px 70px;
+     color: rgb(11, 11, 41);
 }
+.all2 h1{
+    text-decoration: underline;
+    text-decoration-color: rgb(11, 11, 41);
+    padding-top: 20px;
+    text-underline-offset: 10px;
+    font-size: 22px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   
+    width: 150px;
+}
+.all2 h1:hover{
+    text-decoration: none;
+}
+
 
 .skills{
     color:rgb(11, 11, 41);
-    width: 400px;
-    /* margin: 60px auto; */
-    padding: 20px;
-    /* box-shadow: 2px 1px 0px 3px; */
-    
+    width: 300px;   
+}
+.skills h1{
+    padding-left: 10px;
 }
 .skills li{
     padding: 10px;
     list-style: none;
-    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.skill p{
+    font-size: 15px;
+    font-weight: 500;
 }
 .bar{
     background-color: #8d8a8a;
     display: block;
-    height: 10px;
-    border: 1px solid rgba(0,0,0,0.3);
+    height: 8px;
+    border: 1px solid  #8d8a8a ;
     overflow: hidden;
     box-shadow: 1px, 3px rgba(0,0,00.12),0 1px 2px rgba(0,0,0,0.24);
     border-radius: 20px; 
@@ -53,7 +126,7 @@
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 .bar span{
-    height: 10px;
+    height: 8px;
     float: left;
     background-color: rgb(11, 11, 41);   
 }
@@ -89,7 +162,8 @@
     font-weight: 600;
 }
 .skill h6{
-    font-size: 20px;
+    font-size: 16px;
+    font-weight: 500;
 }
 @keyframes Javascript{
     0%{
@@ -133,24 +207,35 @@
       100%{
 width: 65%; }}
 .content{
-    width: 70%;
+    width: 62%;
+    box-shadow: 0 0 15px;
+    border: 8px solid whitesmoke;
+    z-index: 1;
 }
 .temple{
-    background-color: blue;
+    background-color: whitesmoke;
+    
 }
 .container{
-    background-color: aqua;
+   
+    margin-top: -310px;
     display: flex;
+    padding: 60px 30px 60px 30px;
+    background-color: whitesmoke;
+    position: relative;
+    
 }
 .resu-temple{
     transform: rotate(-90deg);
     background-color: rgb(11, 11, 41);
-    color: white;
+    color: whitesmoke;
    height: 100px;
    width: 300px;
   line-height: 30px;
-  text-align: center;
+   margin-top: 500px;
   padding-top: 20px;
+  text-align: center;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
 }
 .resu-temple span{
@@ -161,4 +246,95 @@ width: 65%; }}
 }
 .resu-temple p{
     font-size: 20px;
+}
+.info i{
+    padding-top: 10px;
+    font-size: 17px;
+}
+.info{
+   padding-top: 30px;
+}
+.info p{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 17px;
+    margin-left: 22px;
+    bottom: 18px;
+
+    position: relative;
+}
+.ref1 h1{
+    text-decoration: none;
+    font-size: 16px;
+    width: 300px;
+}
+
+.ref1 li{
+    list-style: none;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    line-height: 20px;
+}
+.reference{
+    margin-left: 10px;
+}
+.head{
+    background-color: rgb(11, 11, 41) ;
+    width: 100%;
+    height: 320px;
+    position:relative;
+    z-index: 1;
+}
+@media screen  and (max-width:500px){
+    .all1{
+        display: block;
+        
+    }
+    .content{
+        width: 80%;
+       /* position: absolute; */
+       top: 30px;
+      
+      
+    }
+    .image{
+        padding-top: 40px;
+    }
+    .all2{
+        display: block;
+        margin-left: -30px;
+    }
+    
+    .skills{
+     width: 90%;
+    }
+    .reference{
+        margin-left: 0;
+        
+    }
+    .skills li{
+        font-size: 13px;
+    }
+    .ref1 h1{
+        width: 100px;
+    }
+    .aboutme h1{
+        margin-left: 0;
+    }
+    .all1{
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+  .container{
+    display: flex;
+    padding-left: 10px;
+    padding-bottom: 40px;
+    flex-direction: column-reverse;
+  }
+  .resu-temple{
+    transform: rotate(0deg);
+    width: 250px;
+    margin-top: 20px;
+    margin-left: 30px;
+
+   }
+ 
 }
