--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@
     width: 200px;
     border-radius: 50%;
     border: 5px solid whitesmoke;
+    object-fit: cover;
 }
 .all1{
     display: flex;
